--- a/installation procedures/tagtamer_public.yaml
+++ b/installation procedures/tagtamer_public.yaml
@@ -1,5 +1,5 @@
 AWSTemplateFormatVersion: 2010-09-09
-Description: AWS Cloudformation template for TagTamer solution components - version - RC7
+Description: AWS Cloudformation template for TagTamer solution components - version - RC9
 
 Metadata: 
   AWS::CloudFormation::Interface: 
@@ -9,15 +9,9 @@ Metadata:
         Parameters: 
           - KeyName
       - Label:
-          default: "Network Configuration for EC2"
-        Parameters: 
-          - VPCID
-          - PrivateSubnet
-      - Label:
           default: "ALB Configuration"
         Parameters: 
           - Certificate
-          - PublicSubnets
           - CIDRIPRange
 
 
@@ -27,23 +21,14 @@ Parameters:
     Type: 'AWS::EC2::KeyPair::KeyName'
     ConstraintDescription: must be the name of an existing EC2 KeyPair.
     Default: yourkeyname
-  VPCID:
-    Description: Name of the VPC
-    Type: 'AWS::EC2::VPC::Id'
-  PublicSubnets:
-    Description: >-
-      Please select atleast 2 subnets for ALB setup. Example: subnet-0a0b04653f7a82e25,subnet-02f03ddba30024a9e
-    Type: 'List<AWS::EC2::Subnet::Id>'
-  PrivateSubnet:
-    Description: >-
-      Name of an existing Private Subnet to deploy ec2. Example: subnet-0a0b04653f7a82e25
-    Type: 'AWS::EC2::Subnet::Id'
   CIDRIPRange:
-    Description : The CIDR IP address range that can be used to access ALB
+    Description : >-
+      The CIDR IP address range that can be used to access ALB.
+      Example: To restrict to particular subnet input 10.10.1.0/24, To allow all subnets input 0.0.0.0/0
     Type: String
     MinLength: 9
     MaxLength: 18
-    Default: 0.0.0.0/0
+#    Default: 0.0.0.0/0
     AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
   Certificate:
     Description: >-
@@ -54,11 +39,149 @@ Parameters:
 
 Resources:
 
+  VPC:
+    Type: AWS::EC2::VPC
+    Properties:
+      CidrBlock: 10.10.10.0/24
+      EnableDnsSupport: true
+      EnableDnsHostnames: true
+      Tags:
+      - Key: Name
+        Value: Tagtamer-VPC
+
+  InternetGateway:
+    Type: AWS::EC2::InternetGateway
+    DependsOn: VPC
+    Properties:
+      Tags:
+      - Key: Name
+        Value: Tagtamer-IGW
+  AttachGateway:
+    Type: AWS::EC2::VPCGatewayAttachment
+    Properties:
+      VpcId: !Ref VPC
+      InternetGatewayId: !Ref InternetGateway
+
+  NATGateway:
+    Type: AWS::EC2::NatGateway
+    Properties:
+      AllocationId: !GetAtt ElasticIPAddress.AllocationId
+      SubnetId: !Ref PublicSubnetA
+      Tags:
+      - Key: Name
+        Value: Tagtamer-NATGW
+  ElasticIPAddress:
+    Type: AWS::EC2::EIP
+    Properties:
+      Domain: VPC
+      Tags:
+      - Key: Name
+        Value: Tagtamer-EIP
+
+
+  PublicSubnetA:
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId: !Ref VPC
+      CidrBlock: 10.10.10.0/26
+      AvailabilityZone: !Sub ${AWS::Region}a
+      Tags:
+      - Key: Name
+        Value: Tagtamer-Public-A
+
+  PublicSubnetB:
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId: !Ref VPC
+      CidrBlock: 10.10.10.64/26
+      AvailabilityZone: !Sub ${AWS::Region}b
+      Tags:
+      - Key: Name
+        Value: Tagtamer-Public-B
+
+  PrivateSubnetA:
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId: !Ref VPC
+      CidrBlock: 10.10.10.128/26
+      AvailabilityZone: !Sub ${AWS::Region}a
+      Tags:
+      - Key: Name
+        Value: Tagtamer-Private-A
+
+  PrivateSubnetB:
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId: !Ref VPC
+      CidrBlock: 10.10.10.192/26
+      AvailabilityZone: !Sub ${AWS::Region}b
+      Tags:
+      - Key: Name
+        Value: Tagtamer-Private-B
+
+  # Some route tables for our subnets:
+  PublicRouteTable:
+    Type: AWS::EC2::RouteTable
+    Properties:
+      VpcId: !Ref VPC
+      Tags:
+      - Key: Name
+        Value: Tagtamer-Public-route
+
+  PublicRoute1:   # Public route table has direct routing to IGW:
+    Type: AWS::EC2::Route
+    DependsOn: AttachGateway
+    Properties:
+      RouteTableId: !Ref PublicRouteTable
+      DestinationCidrBlock: 0.0.0.0/0
+      GatewayId: !Ref InternetGateway  
+
+  # Here is a private route table:
+  PrivateRouteTable:
+    Type: AWS::EC2::RouteTable
+    Properties:
+      VpcId: !Ref VPC
+      Tags:
+      - Key: Name
+        Value: Tagtamer-Private-route
+
+  PrivateRoute1:            # Private route table can access web via NAT (created below)
+    Type: AWS::EC2::Route
+    Properties:
+      RouteTableId: !Ref PrivateRouteTable
+      DestinationCidrBlock: 0.0.0.0/0
+      # Route traffic through the NAT Gateway:
+      NatGatewayId: !Ref NATGateway
+
+# Attach the public subnets to public route tables,
+  # and attach the private subnets to private route tables:   
+  PublicSubnetARouteTableAssociation:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      SubnetId: !Ref PublicSubnetA
+      RouteTableId: !Ref PublicRouteTable
+  PublicSubnetBRouteTableAssociation:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      SubnetId: !Ref PublicSubnetB
+      RouteTableId: !Ref PublicRouteTable
+  PrivateSubnetARouteTableAssociation:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      SubnetId: !Ref PrivateSubnetA
+      RouteTableId: !Ref PrivateRouteTable
+  PrivateSubnetBRouteTableAssociation:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      SubnetId: !Ref PrivateSubnetB
+      RouteTableId: !Ref PrivateRouteTable
+
+
   PublicLoadBalancerSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
       VpcId:
-        Ref: VPCID
+        Ref: VPC
       GroupDescription: Internet facing LoadBalancer security group
       SecurityGroupIngress:
       - CidrIp: !Ref CIDRIPRange
@@ -78,7 +201,9 @@ Resources:
     Properties:
       Name: TagtamerALB
       Scheme: internet-facing
-      Subnets: !Ref PublicSubnets
+      Subnets: 
+        - !Ref PublicSubnetA
+        - !Ref PublicSubnetB
       SecurityGroups: 
       - Ref: PublicLoadBalancerSecurityGroup
       Tags:
@@ -123,7 +248,7 @@ Resources:
       Port: 443
       Protocol: HTTPS
       VpcId:
-        Ref: VPCID
+        Ref: VPC
       Targets:
       - Id: !Ref EC2Instance
         Port: 443
@@ -143,7 +268,7 @@ Resources:
       ProvisionedThroughput:
         ReadCapacityUnits: '5'
         WriteCapacityUnits: '5'
-      TableName: tag_groups
+      TableName: tag_tamer_tag_groups
   TagTamerRolesTable:
     Type: 'AWS::DynamoDB::Table'
     Properties:
@@ -156,7 +281,7 @@ Resources:
       ProvisionedThroughput:
         ReadCapacityUnits: '5'
         WriteCapacityUnits: '5'
-      TableName: roles
+      TableName: tag_tamer_roles
   TagTamerRole:
     Type: 'AWS::IAM::Role'
     Properties:
@@ -186,7 +311,7 @@ Resources:
     Properties:
       GroupDescription: Allow http/ssh traffic
       GroupName: SG-TagTamer
-      VpcId: !Ref VPCID
+      VpcId: !Ref VPC
       SecurityGroupIngress:
         - IpProtocol: tcp
           FromPort: 80
@@ -208,7 +333,7 @@ Resources:
         - !GetAtt "InstanceSecurityGroup.GroupId"
       ImageId: ami-02a35aaef5d96cafb
       KeyName: !Ref KeyName
-      SubnetId: !Ref PrivateSubnet
+      SubnetId: !Ref PrivateSubnetA
       IamInstanceProfile: !Ref TagTamerInstanceProfile
       Tags:
         - Key: Name
@@ -261,7 +386,6 @@ Resources:
             Resource: '*'
           - Sid: serviceCatalog
             Action:
-              - 'servicecatalog:CreateProduct'
               - 'servicecatalog:CreateTagOption'
               - 'servicecatalog:DescribePortfolio'
               - 'servicecatalog:DescribeProduct'
@@ -281,12 +405,50 @@ Resources:
               - 'dynamodb:Scan'
               - 'dynamodb:UpdateItem'
             Resource:
-              - 'arn:aws:dynamodb:*:*:table/roles'
-              - 'arn:aws:dynamodb:*:*:table/tag_groups'
+              - 'arn:aws:dynamodb:*:*:table/tag_tamer_roles'
+              - 'arn:aws:dynamodb:*:*:table/tag_tamer_tag_groups'
       Roles:
         - TagTamerRole
     DependsOn:
       - TagTamerRole
+
+
+  TagTamerWebACL:
+    Type: AWS::WAFv2::WebACL
+    Properties:
+      Name: TagTamerWebACL
+      Scope: REGIONAL
+      Description: Tag Tamer WAF
+      DefaultAction:
+        Allow: {}
+      VisibilityConfig:
+        SampledRequestsEnabled: true
+        CloudWatchMetricsEnabled: true
+        MetricName: TagTamerWebACL
+      Rules:
+        - Name: AWS-AWSManagedRulesCommonRuleSet
+          Priority: 0
+          OverrideAction:
+            Count: {}
+          VisibilityConfig:
+            SampledRequestsEnabled: true
+            CloudWatchMetricsEnabled: true
+            MetricName: AWS-AWSManagedRulesCommonRuleSet
+          Statement:
+            ManagedRuleGroupStatement:
+              VendorName: AWS
+              Name: AWSManagedRulesCommonRuleSet
+    DependsOn:
+      - PublicLoadBalancer
+
+  TagTamerWebACLAssociation:
+    Type: "AWS::WAFv2::WebACLAssociation"
+    Properties:
+      ResourceArn: !Ref PublicLoadBalancer
+      WebACLArn: { "Fn::GetAtt" : ["TagTamerWebACL", "Arn"] }
+    DependsOn:
+      - TagTamerWebACL
+
 Outputs:
   InstanceId:
     Description: InstanceId of the newly created EC2 instance
