--- a/deployment/tagtamer_public.yaml
+++ b/deployment/tagtamer_public.yaml
@@ -358,6 +358,13 @@ Resources:
     Type: 'AWS::EC2::Instance'
     Properties:
       InstanceType: t2.micro
+      BlockDeviceMappings:
+        - DeviceName: /dev/xvda
+          Ebs:
+            VolumeType: gp2
+            VolumeSize: 8
+            DeleteOnTermination: true
+            Encrypted: true
       SecurityGroupIds:
         - !GetAtt "InstanceSecurityGroup.GroupId"
       ImageId: !Ref AMIID
