--- a/deployment/tagtamer_private.yaml
+++ b/deployment/tagtamer_private.yaml
@@ -124,6 +124,9 @@ Resources:
           FromPort: 443
           ToPort: 443
           CidrIp: !Ref CIDRIPRange
+      SecurityGroupEgress:
+        - IpProtocol: tcp
+          CidrIp: '0.0.0.0/0'
   EC2Instance:
     Type: 'AWS::EC2::Instance'
     Properties:
@@ -214,7 +217,7 @@ Resources:
         EmailSendingAccount: COGNITO_DEFAULT
       EmailVerificationMessage: 'Your Tag Tamer verification code is {####}. '
       EmailVerificationSubject: Your Tag Tamer verification code
-      MfaConfiguration: 'OFF'
+      MfaConfiguration: 'OPTIONAL'
       Policies:
         PasswordPolicy:
           MinimumLength: 8
