--- a/deployment/tagtamer_public.yaml
+++ b/deployment/tagtamer_public.yaml
@@ -61,6 +61,13 @@ Parameters:
     Default: tag_tamer_identity_pool
     Description: Name of Tag Tamer's Amazon Cognito Identity Pool
 
+Mappings:
+  SourceCode:
+    General:
+      S3Bucket: '%%BUCKET_NAME%%'
+      KeyPrefix: '%%SOLUTION_NAME%%/%%VERSION%%'
+      Version: '%%VERSION%%'
+
 Resources:
 
   VPC:
@@ -237,6 +244,8 @@ Resources:
             reason: "Works as designed"
           - id: W36
             reason: "This Security Group includes a description."
+          - id: W29
+            reason: "Works as designed"
 
   PublicLoadBalancer:
     Type: AWS::ElasticLoadBalancingV2::LoadBalancer
@@ -416,6 +425,8 @@ Resources:
             reason: "Tag Tamer customer may limit ingress CIDR to specific IP ranges for their users."
           - id: W28
             reason: "Works as designed"
+          - id: W29
+            reason: "Works as designed"
           - id: W5
             reason: "Works as designed"
           - id: W9
@@ -555,7 +566,7 @@ Resources:
         EmailSendingAccount: COGNITO_DEFAULT
       EmailVerificationMessage: 'Your Tag Tamer verification code is {####}. '
       EmailVerificationSubject: Your Tag Tamer verification code
-      MfaConfiguration: 'OPTIONAL'
+      MfaConfiguration: 'OFF'
       Policies:
         PasswordPolicy:
           MinimumLength: 8
